hyperlinkregister,student profile design solved

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="Eng">
 
-<!-- Mirrored from icccomputers.in/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 19 Mar 2024 12:49:24 GMT -->
+<!-- Mirrored from GURUKRUPAcomputers.in/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 19 Mar 2024 12:49:24 GMT -->
 <!-- Added by HTTrack -->
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 
@@ -12,7 +12,7 @@
     <meta name="description"
         content="Computer Institute - Gurukrupa Research And Training Centre is the best Computer institute in Deoria, Bhatpar Rani, Near Central Bank. We are accredited centre of NIELIT CCC & O level. Authorise centre of Tally Academy. We are also offering Programing Courses C Language, C++, Java etc.">
     <meta name="keywords"
-        content="Gurukrupa Research And Training Centre, Deoria, Bhatpar Rani, Near Central Bank ICC, Best computer institute in Deoria, computer institute,ICC in Deoria,ccc, o level, java, c, c++ courses " />
+        content="Gurukrupa Research And Training Centre, Deoria, Bhatpar Rani, Near Central Bank GURUKRUPA, Best computer institute in Deoria, computer institute,GURUKRUPA in Deoria,ccc, o level, java, c, c++ courses " />
     <!-- responsive tag -->
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -111,7 +111,7 @@
                     <div class="row">
                         <div class="col-md-8 col-sm-12">
                             <div class="logo-area text-center" style="margin-top:3%!important;">
-                                <a href="index-2.html">
+                                <a href="index.html">
                                     <div class="logo"><img src="images/headlogo.png" alt="logo">
                                 </a>
                             </div>
@@ -281,7 +281,7 @@
                                 <!-- Home -->
                                 <li class="current-menu-item current_page_item "> <a href="index.html"
                                         class="home">Home</a> </li>
-                                <li class="current-menu-item current_page_item "> <a href="page5887.html"
+                                <li class="current-menu-item current_page_item "> <a href="about.html"
                                         class="home">About Us</a> </li>
                                 <!-- End Home -->
                                 <!--About Menu Start-->
@@ -299,12 +299,13 @@
                                 <!--About Menu End-->
                                 <li class="menu-item-has-children"> <a href="javascript:void(0);">Verification</a>
                                     <ul class="sub-menu">
-                                        <li><a href="pay.html">Registration</a></li>
+                                        <li><a href="admitcard.html">Student Profile</a></li>
+                                        <li><a href="registration.html">Registration</a></li>
                                     </ul>
                                 </li>
-                                <li class="current-menu-item current_page_item "> <a href="registration.html"
+                                <li class="current-menu-item current_page_item "> <a href="notice.html"
                                         class="home">Notice Board</a> </li>
-                                <li class="current-menu-item current_page_item"> <a href="admitcard.html">Events</a>
+                                <li class="current-menu-item current_page_item"> <a href="event.html">Events</a>
                                 </li>
                                 <li class="current-menu-item current_page_item"><a href="gallery.html">Gallery</a>
                                 </li>
@@ -313,11 +314,7 @@
                                 <!--Contact Menu End-->
                             </ul>
                         </nav>
-                        <div class="right-bar-icon rs-offcanvas-link text-right">
-                            <a class="hidden-xs rs-search" data-target=".search-modal" data-toggle="modal" href="#"><i
-                                    class="fa fa-search"></i></a>
-                            <a id="nav-expander" class="nav-expander fixed"><i class="fa fa-bars fa-lg white"></i></a>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -361,7 +358,7 @@
                             <div class="display-table-cell">
                                 <div class="container text-center">
                                     <h1 class="slider-title animated wow fade-up animation-jump" data-wow-delay=".2s"
-                                        data-wow-duration="2s">WELCOME TO ICC Computer <br />Training Institute</h1>
+                                        data-wow-duration="2s">WELCOME TO GURUKRUPA Computer <br />Training Institute</h1>
                                     <h1>
                                         <a href="#" style="color:#ffffff;text-decoration: none;font-size:40px;"
                                             class="typewrite slider-desc" data-period="2000" data-type='[ "Regd. by Govt. of NCT New Delhi..",
@@ -386,7 +383,7 @@
                             <div class="display-table-cell">
                                 <div class="container text-center">
                                     <h1 class="slider-title animated wow fade-up animation-jump" data-wow-delay=".2s"
-                                        data-wow-duration="2s">WELCOME TO ICC Computer <br />Training Institute</h1>
+                                        data-wow-duration="2s">WELCOME TO GURUKRUPA Computer <br />Training Institute</h1>
                                     <h1>
                                         <a href="#" style="color:#ffffff;text-decoration: none;font-size:40px;"
                                             class="typewrite slider-desc" data-period="2000" data-type='[ "Regd. by Govt. of NCT New Delhi..",
@@ -411,7 +408,7 @@
                             <div class="display-table-cell">
                                 <div class="container text-center">
                                     <h1 class="slider-title animated wow fade-up animation-jump" data-wow-delay=".2s"
-                                        data-wow-duration="2s">WELCOME TO ICC Computer <br />Training Institute</h1>
+                                        data-wow-duration="2s">WELCOME TO GURUKRUPA Computer <br />Training Institute</h1>
                                     <h1>
                                         <a href="#" style="color:#ffffff;text-decoration: none;font-size:40px;"
                                             class="typewrite slider-desc" data-period="2000" data-type='[ "Regd. by Govt. of NCT New Delhi..",
@@ -1139,6 +1136,6 @@
     <script src="js/main.js"></script>
 </body>
 
-<!-- Mirrored from icccomputers.in/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 19 Mar 2024 12:50:01 GMT -->
+<!-- Mirrored from GURUKRUPAcomputers.in/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 19 Mar 2024 12:50:01 GMT -->
 
 </html>
