registration is complete waiting for api response and verify student is progress

--- a/admitcard.html
+++ b/admitcard.html
@@ -394,8 +394,32 @@ border: 1px solid #ccc;}
 <div class="form-group col-12">
 <input class="btn" name="go" type="submit" id="submit" value="Verify">
 </div>
-<div class="form-group col-12">
+<div class="form-group col-12 ">
 Powered by : <strong>GURUKRUPA</strong>				
+</div>	
+<div class="form-group col-12 result_div">
+<div class="leftBox">leftbox</div>
+<div class="rightBox">rightbox</div>	
+<style>
+.result_div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.leftBox{
+    margin-right: 5px;
+    gap: 2;
+    border: 2px solid black;
+    width: 49%;
+    height: 50vh;
+    border-radius: 7px;
+}
+.rightBox{
+    border-radius: 7px;
+    height: 50vh;
+    width: 49%;border: 2px solid black;
+}
+</style>			
 </div>	
 </div>
 </form>
