--- a/admitcard.html
+++ b/admitcard.html
@@ -409,12 +409,13 @@ border: 1px solid #ccc;}
         display: flex;
         justify-content: space-between; /* Position left and right */
         margin-top: 20px; /* Adjust margin as needed */
+        margin-bottom: 6px;
     }
     
     /* Style for the left and right boxes */
     .left-box,
     .right-box {
-        display: block; /* Initially hide the boxes */
+        display: none; /* Initially hide the boxes */
         width: 45%; /* Adjust width as needed */
         padding: 10px;
         border: 1px solid #ccc; /* Example border color */
