--- a/index.html
+++ b/index.html
@@ -311,6 +311,8 @@
                                 </li>
                                 <li class="current-menu-item current_page_item"> <a href="contact-us.html">Contact us</a>
                                 </li>
+                                <li class="current-menu-item current_page_item"> <a href="exams.html">Exams</a>
+                                </li>
                                 <!--Contact Menu End-->
                             </ul>
                         </nav>
