--- a/registration.html
+++ b/registration.html
@@ -452,6 +452,9 @@ function find_batch(batchid) {
                             </li>
                             <li class="current-menu-item current_page_item"> <a href="contact-us.html">Contact us</a>
                             </li>
+                        </li>
+                        <li class="current-menu-item current_page_item"> <a href="exams.html">Exams</a>
+                        </li>
                             <!--Contact Menu End-->
                         </ul>
                     </nav>
