--- a/index.html
+++ b/index.html
@@ -249,10 +249,11 @@
                             </style>
                             <center>
                                 <div class="mrg-tp-15" style="margin-top:15px;margin-bottom:5px;">
-                                    <a class="olbtn" href="inquiry.html" style="margin-top:5px;">Enquiry </a>
-                                    <a class="olbtn" href="contact-us.html" style="margin-top:5px;"> Call Request </a>
-                                    <a class="olbtn" href="business-partner.html" style="margin-top:5px;"> Franchise
+                                    <a class="olbtn" href="index.html" style="margin-top:5px;">Enquiry </a>
+                                    <a class="olbtn" href="index.html" style="margin-top:5px;"> Call Request </a>
+                                    <a class="olbtn" href="index.html" style="margin-top:5px;"> Franchise
                                         Enquiry</a>
+                                    <a class="olbtn" href="./Login/login.html" style="margin-top:5px;">Attend Exams</a>
                                 </div>
                             </center>
 
