--- a/notice.html
+++ b/notice.html
@@ -243,9 +243,9 @@
                         </style>
                         <center>
                             <div class="mrg-tp-15" style="margin-top:15px;margin-bottom:5px;">
-                                <a class="olbtn" href="inquiry.html" style="margin-top:5px;">Enquiry </a>
-                                <a class="olbtn" href="contact-us.html" style="margin-top:5px;"> Call Request </a>
-                                <a class="olbtn" href="business-partner.html" style="margin-top:5px;"> Franchise
+                                <a class="olbtn" href="index.html" style="margin-top:5px;">Enquiry </a>
+                                <a class="olbtn" href="index.html" style="margin-top:5px;"> Call Request </a>
+                                <a class="olbtn" href="index.html" style="margin-top:5px;"> Franchise
                                     Enquiry</a>
                             </div>
                         </center>
