--- a/Exam/exam.html
+++ b/Exam/exam.html
@@ -93,7 +93,8 @@
         </div>
 
         <div class="text-right">
-          <span id="timer">1:00:00</span> <!-- Timer display -->
+          <span id="timer">1:00:00</span>
+          <!-- Timer display -->
         </div>
       </div>
       <div class="flex flex-grow">
@@ -102,7 +103,9 @@
         </div>
         <div class="w-1/4 flex flex-col">
           <div class="p-4 border rounded mb-4 flex-grow">
-            <h3 class="font-semibold mb-2" style="margin-left: 27px;">Question Palette:</h3>
+            <h3 class="font-semibold mb-2" style="margin-left: 27px">
+              Question Palette:
+            </h3>
             <div class="question-palette">
               <!-- Question palette buttons will be dynamically added here -->
             </div>
